<resources>
    <string name="app_name">My_Application_Guess</string>
    <string name="please_enter_the_number">Please enter the number(1~10)</string>
    <string name="ok">OK</string>
    <string name="Yes_you_got_it">Yes,you got it</string>
    <string name="bigger">Bigger</string>
    <string name="smaller">Smaller</string>
    <string name="dialot_title">Message</string>
    <string name="title_activity_material" translatable="false">MaterialActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
</resources>